opam-version: "2.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/re2_serializable"
bug-reports: "https://github.com/janestreet/re2_serializable/issues"
dev-repo: "git+https://github.com/janestreet/re2_serializable.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/re2_serializable/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "core_kernel"
  "ppx_jane"
  "re2"
  "dune"        {>= "2.0.0"}
]
synopsis: "Re2_serializable adds an incomplete but stable serialization of Re2"
description: "
Re2_serializable adds an incomplete but stable serialization of Re2. This
 serialization only transmits the pattern, not the options
"
